# code-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .sizecheck-exceptions.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.worker  README.md  alembic.ini  cliff.toml  db.sqlite  docker-compose.yml  pyproject.toml  rewrite_imports.py  scratch_test_referer.py
.agents/: README.md  stabilization_tasks.md
.github/: dependabot.yml
apps/: observability.py  observability_utils.py  runtime.py
code_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
db/: __init__.py  base.py  enums.py  models.py  utils.py
docs/: architecture.md  bootstrap_file_list.md  implementation_order.md  m23-slice-1-memory-load-persist.md  m23-slice-2-fulltext-search.md  m23-slice-5-memory-admission.md  m23-slice-6-episodic-observation-layer.md  m23-slice-7-observation-admission-visibility.md  m24_9_5_langgraph_boundary_audit.md  m24_9_5_legacy_drain_plan.md  m24_9_5_temporal_runtime_consolidation.md  m25_3_observation_ledger.md  m25_3_slice_3_evidence_summary.md  m25_3_temporal_cutover_verification.md  mvp_backlog.md  roadmap.md  role_native_messaging_strategy.md  runbook.md  sandbox_policy.md  stabilization_tasks.md  status.md  task_template.md  tracing_manual.md  webhook_manual.md  worker_routing_policy.md
evaluation/: __init__.py  baseline_m20.0.json  frozen_suite.json  harness.py  memory_extraction.py  memory_extraction_suite.json  memory_retrieval.py  memory_retrieval_realistic_report.md  memory_retrieval_realistic_suite.json  memory_retrieval_suite.json  models.py  orchestrator_runner.py  routing_metrics.json  suite.py
memory/: __init__.py  admission.py  observation.py  read_side_gate.py  repository_profile.py
orchestrator/: __init__.py  brain.py  budget_utils.py  checkpoints.py  constants.py  decomposition.py  execution.py  execution_context.py  execution_graph_input.py  execution_heartbeat_service.py  execution_improvement_proposal_service.py  execution_interaction_service.py  execution_milestone_service.py  execution_outcome_service.py  execution_policy.py  execution_proposal_service.py  execution_queue.py  execution_queue_ownership_service.py  execution_resume_service.py  execution_retention_service.py  execution_runtime_service.py  execution_serialization.py  execution_snapshot_service.py  execution_submission_service.py  execution_tracing.py  execution_types.py  execution_worker_service.py  github_repo.py  graph.py  improvement_suggestions.py  node_execution.py  performance_routing.py  reflection.py  repo_profile.py  review.py  runtime_manifest.py  scout_proposals.py  state.py  task_spec.py  verification.py
privacy/: __init__.py  redaction.py
repositories/: __init__.py  session.py  sqlalchemy.py  sqlalchemy_capacity.py  sqlalchemy_common.py  sqlalchemy_interaction.py  sqlalchemy_memory.py  sqlalchemy_memory_admission.py  sqlalchemy_memory_proposal.py  sqlalchemy_milestone.py  sqlalchemy_observation.py  sqlalchemy_plan.py  sqlalchemy_proposal.py  sqlalchemy_run.py  sqlalchemy_runtime_cutover.py  sqlalchemy_session.py  sqlalchemy_task.py  sqlalchemy_temporal_command.py  sqlalchemy_temporal_state.py  sqlalchemy_timeline.py  sqlalchemy_worker.py
sandbox/: __init__.py  audit.py  constants.py  container.py  policy.py  redact.py  runner.py  scratch.py  session.py  streams.py  workspace.py
scratch/: delete_traces.py  verify_redaction.py
scripts/: check_python_file_sizes.py  init_webhook.sh  migrate_eval_reports.py  up.sh
tests/: conftest.py
tools/: __init__.py  browser.py  file_editor.py  git.py  github.py  mcp.py  numeric.py  policy.py  policy_read_only.py  registry.py  tracing.py
(+493 files in other folders)
