[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent"
version = "0.1.0"
description = "Bootstrap scaffold for a personal coding-agent service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0,<5.0",
    "pytest>=8.4,<9.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["apps*", "db*", "memory*", "orchestrator*", "sandbox*", "tools*", "workers*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
