[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent"
version = "0.1.0"
description = "Bootstrap scaffold for a personal coding-agent service."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy>=2.0,<3.0",
    "fastapi>=0.116,<1.0",
    "uvicorn>=0.35,<1.0"
]

[project.optional-dependencies]
dev = [
    "alembic>=1.16,<2.0",
    "httpx>=0.28,<1.0",
    "pre-commit>=4.0,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "PyYAML>=6.0,<7.0",
    "pytest>=8.4,<10.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = [
    "apps*",
    "db*",
    "memory*",
    "orchestrator*",
    "repositories*",
    "sandbox*",
    "tools*",
    "workers*",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_untyped_defs = true
exclude = ["^tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "semver"
tag_format = "$version"
update_changelog_on_bump = false
