[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "code-agent"
version = "0.1.0"
description = "Bootstrap scaffold for a personal coding-agent service."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12,<4.0"
dependencies = [
    "SQLAlchemy>=2.0,<3.0",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "langchain-core>=1.2.22,<2.0",
    "langgraph>=1.0.10,<2.0",
    "langgraph-checkpoint>=4.0.0,<5.0",
    "langgraph-checkpoint-sqlite>=3.0.3,<5.0",
    "uvicorn>=0.35,<1.0",
    "cryptography>=46.0.7,<47.0",
    "alembic>=1.18.4,<2.0",
    "psycopg[binary]>=3.3.3,<4.0"
]

[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.0,<5.0"
PyYAML = ">=6.0.3,<7.0"
pytest = ">=9.0.3,<10.0"
pytest-cov = ">=7.0,<8.0"

[tool.poetry]
packages = [
    {include = "apps"},
    {include = "db"},
    {include = "evaluation"},
    {include = "memory"},
    {include = "orchestrator"},
    {include = "repositories"},
    {include = "sandbox"},
    {include = "tools"},
    {include = "workers"},
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
pretty = true
show_error_codes = true
disallow_untyped_defs = true
exclude = ["^tests/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "semver"
tag_format = "$version"
update_changelog_on_bump = false
